minor layout fixes (haskell -> ast -> haskell was too long...)

--- a/xTestingDiagramm/css/style.css
+++ b/xTestingDiagramm/css/style.css
@@ -363,3 +363,17 @@ ul img {
     margin: 50px 0;
     padding: 20px 0;
 }
+
+
+#pies #pieNames div {
+	float:left;
+	width:25%;
+	text-align: center;
+	font-size: 20px;
+}
+
+
+
+
+
+
